--- a/Clase 02 Visualizacion II_Hist & Kernels/Clase2_P2_Matplotlib.ipynb
+++ b/Clase 02 Visualizacion II_Hist & Kernels/Clase2_P2_Matplotlib.ipynb
@@ -35,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Matplotlib genera los gráficos sobre dos objetos interrelacionados:\n",
+    "**Matplotlib** genera los gráficos sobre dos objetos interrelacionados:\n",
     "- Figura (*Figure*): la hoja en blanco, el recuadro que contiene hacia adentro el/los gráfico/s. En términos prácticos esto ocurre detrás de escenas, pero es lo que permite dibujar el gráfico.\n",
     "- Ejes (*Axes*): el gráfico en sí, los ejes y la informacíon graficada. La representación de la información sobre ejes."
    ]
@@ -88,7 +88,15 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ubicar la carpeta donde hayan descargado el archivo para esta parte de visualización"
    ]
   },
   {
@@ -97,8 +105,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "os.chdir(\"/Users/mnromero/Dropbox/COURSES/2025 - S1- Big Data y Machine Learning (UBA)/Clases/Clase 4_Pandas & Matplotlib\")"
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "os.chdir(\"/Users/mnromero/Dropbox/COURSES/2025 - S2 - Big Data y Machines Learning (UBA)/Clases/Clase 02 Visualizacion II_Hist & Kernels/archivos P2_Matplotlib\")"
    ]
   },
   {
@@ -150,7 +167,7 @@
     "# Agregamos (collapse) a nivel de tipo de fuente\n",
     "df_fuente = df.groupby(by=[\"periodo\",\"fuente_generacion\"]).agg({\"potencia_instalada_mw\":\"sum\"})\n",
     "df_fuente.reset_index(inplace=True)\n",
-    "df_fuente.sample(5)"
+    "df_fuente.sample(5)\n"
    ]
   },
   {
@@ -169,7 +186,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Vamos a graficar dos líneas, así que definimos vector X e Y para cada una. Vamos a graficar la potencia instalada de generación por fuente Renovable y fuente Térmica:"
+    "### Grafico de tendencia\n",
+    "Vamos a graficar dos líneas, así que definimos vector X (*periodo*) e Y (*series de tiempo*) para cada una. Vamos a graficar la potencia instalada de generación por fuente *Renovable* y *Térmica*.\n",
+    "\n",
+    "*Nota*: `df[condicion][columna]` selecciona la \"columna\" de la base que resulta de aplicar el filtro `df[condicion]`."
    ]
   },
   {
@@ -185,9 +205,14 @@
     "x1 = df_fuente[df_fuente[\"fuente_generacion\"]==\"Renovable\"][\"periodo\"]\n",
     "# Definimos  vectores  de datos  para  serie 2 (térmica)\n",
     "y2 = df_fuente[df_fuente[\"fuente_generacion\"]==\"Térmica\"][\"potencia_instalada_mw\"]\n",
-    "x2 = df_fuente[df_fuente[\"fuente_generacion\"]==\"Térmica\"][\"periodo\"]\n",
-    "\n",
-    "# Nota: df[condicion][columna] selecciona la \"columna\" de la base que resulta de aplicar el filtro df[condicion]."
+    "x2 = df_fuente[df_fuente[\"fuente_generacion\"]==\"Térmica\"][\"periodo\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Gráfico al estilo `pyplot`"
    ]
   },
   {
@@ -200,19 +225,69 @@
    "outputs": [],
    "source": [
     "# Creamos el gráfico al estilo pyplot\n",
-    "\n",
     "plt.plot(x1, y1, label=\"Renovable\") # serie 1\n",
     "plt.plot(x2, y2, label=\"Térmica\") # serie 2\n",
     "# Estas  dos  líneas  estaran  sobre  el mismo  gráfico\n",
     "\n",
     "# Modifico  labels\n",
     "plt.xlabel(\"Período\")\n",
-    "plt.ylabel(\"Potencia  Instalada (MW)\")\n",
-    "plt.title(\"Figura 1. Producción Energética Argentina según Fuente\")\n",
+    "plt.ylabel(\"Potencia  Instalada (en MW)\")\n",
+    "plt.title(\"Figura 1. Producción Energética Argentina\\nsegún Fuente\")\n",
     "\n",
     "# Agrego  leyenda\n",
     "plt.legend()\n",
-    "plt.show() #esto es necesario para visualizar"
+    "plt.show() #esto es necesario para visualizar\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Una buena practica es exportar todas las figuras en una carpeta por aparte para ser ordenados. Lo que haremos ahora es guardar el directorio de ubicación de dicha carpeta y, si no existe la carpeta, que cree nuestra carpeta de figuras."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ruta de la carpeta donde se guardará el gráfico\n",
+    "carpeta = '/Users/mnromero/Dropbox/COURSES/2025 - S2 - Big Data y Machines Learning (UBA)/Clases/Clase 02 Visualizacion II_Hist & Kernels/figuras'\n",
+    "\n",
+    "# Verifica si la carpeta existe, si no, créala\n",
+    "if not os.path.exists(carpeta):\n",
+    "    os.makedirs(carpeta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Volvemos a graficar\n",
+    "plt.plot(x1, y1, label=\"Renovable\") # serie 1\n",
+    "plt.plot(x2, y2, label=\"Térmica\") # serie 2\n",
+    "# Estas  dos  líneas  estaran  sobre  el mismo  gráfico\n",
+    "\n",
+    "# Modifico  labels\n",
+    "plt.xlabel(\"Período\")\n",
+    "plt.ylabel(\"Potencia  Instalada (en MW)\")\n",
+    "plt.title(\"Figura 1. Producción Energética Argentina\\nsegún Fuente\")\n",
+    "\n",
+    "# Agrego  leyenda\n",
+    "plt.legend()\n",
+    "\n",
+    "# Guardamos el gráfico en la carpeta (no usamos la funcion .show() para ahora guardarla)\n",
+    "plt.savefig(os.path.join(carpeta, 'figura_1.png'), bbox_inches='tight', dpi=300)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Creamos el gráfico al estilo OO (orientado-objetos)"
    ]
   },
   {
@@ -224,8 +299,6 @@
    },
    "outputs": [],
    "source": [
-    "# Creamos el gráfico al estilo OO (orientado-objetos)\n",
-    "\n",
     "# Creamos la figura y los axes\n",
     "fig, ax = plt.subplots() # crear objetos\n",
     "\n",
@@ -235,12 +308,20 @@
     "\n",
     "# Modificamos labels y título\n",
     "ax.set_xlabel(\"Período\")\n",
-    "ax.set_ylabel(\"Potencia  Instalada (MW)\")\n",
-    "ax.set_title(\"Producción Energética Argentina según Fuente (v2)\")\n",
+    "ax.set_ylabel(\"Potencia  Instalada (en MW)\")\n",
+    "ax.set_title(\"Producción Energética Argentina\\nsegún Fuente (v2)\")\n",
     "\n",
     "# Agregamos leyenda\n",
     "ax.legend()\n",
-    "fig.show()"
+    "# Guardamos el gráfico en la carpeta (no usamos la funcion .show() para ahora guardarla)\n",
+    "plt.savefig(os.path.join(carpeta, 'figura_2.png'), bbox_inches='tight', dpi=300)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Graficar múltiples gráficos estilo `pyplot`"
    ]
   },
   {
@@ -252,24 +333,30 @@
    },
    "outputs": [],
    "source": [
-    "# Graficar múltiples gráficos estilo pyplot\n",
-    "\n",
     "# ejemplo 2 ax en un fig\n",
     "plt.figure(figsize=(14, 5))\n",
     "\n",
-    "# Definimos primer gráfico\n",
+    "# Definimos primer panel\n",
     "plt.subplot(121) # subplot(nrows, ncols, index, **kwargs) donde nrows=1, ncols=2, index=1\n",
     "plt.plot(x1, y1)\n",
     "plt.title(\"A. Fuente Renovable\")\n",
     "\n",
-    "# Definimos segundo gráfico\n",
+    "# Definimos segundo panel\n",
     "plt.subplot(122)\n",
     "plt.plot(x2, y2)\n",
     "plt.title(\"B. Fuente Térmica\")\n",
     "\n",
     "# Definimos título general de la figura\n",
     "plt.suptitle(\"Ejemplo dos gráficos en una figura\")\n",
-    "plt.show()"
+    "# Guardamos el gráfico en la carpeta (no usamos la funcion .show() para ahora guardarla)\n",
+    "plt.savefig(os.path.join(carpeta, 'figura_3_paneles.png'), bbox_inches='tight', dpi=300)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Graficar múltiples gráficos estilo orientado a objetos (o-o)"
    ]
   },
   {
@@ -281,39 +368,49 @@
    },
    "outputs": [],
    "source": [
-    "# Graficar múltiples gráficos estilo O-O\n",
-    "\n",
     "# ejemplo 2 ax en un fig\n",
     "fig, ax = plt.subplots(figsize=(14, 5), ncols=2, nrows=1)\n",
     "\n",
-    "# Definimos primer gráfico\n",
+    "# Definimos primer panel\n",
     "ax[0].plot(x1, y1)\n",
-    "ax[0].set_title(\"Fuente Renovable\")\n",
+    "ax[0].set_title(\"A. Fuente Renovable\")\n",
     "\n",
-    "# Definimos segundo gráfico\n",
+    "# Definimos segundo panel\n",
     "ax[1].plot(x2, y2)\n",
-    "ax[1].set_title(\"Fuente Térmica\")\n",
+    "ax[1].set_title(\"B. Fuente Térmica\")\n",
     "\n",
     "# Definimos título general de la figura\n",
     "fig.suptitle(\"Ejemplo dos gráficos en una figura\")\n",
-    "fig.show()"
+    "# Guardamos el gráfico en la carpeta (no usamos la funcion .show() para ahora guardarla)\n",
+    "plt.savefig(os.path.join(carpeta, 'figura_4_paneles_o-o.png'), bbox_inches='tight', dpi=300)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Comentario: un gráfico orientado a objetos (O-O) en Matplotlib se refiere al uso explícito de los objetos Figure y Axes para crear y controlar un gráfico. Esto contrasta con el enfoque stateful (pyplot), que modifica el estado global de la visualización.\n"
+    "*Comentario*: un gráfico orientado a objetos (O-O) en Matplotlib se refiere al uso explícito de los objetos `Figure` y `Axes` para crear y controlar un gráfico. Esto contrasta con el enfoque stateful (`pyplot`), que modifica el estado global de la visualización.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Gráficos con ipywidgets\n",
+    "### Gráficos avanzados con `ipywidgets`\n",
     "\n",
     "Los widgets en Python son objetos que tienen una representación en el navegador. Por ejemplo, los widgets pueden tener forma de una caja de texto, un desplegable, una casilla de verificación, etc.\n",
     "Más info sobre ipywidgets [acá](https://ipywidgets.readthedocs.io/en/latest/examples/Widget%20Basics.html)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "pip install ipywidgets"
    ]
   },
   {
@@ -335,7 +432,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pip install ipywidgets"
+    "boton = widgets.Button(description='Haz clic')\n",
+    "display(boton)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "widgets.IntSlider()"
    ]
   },
   {
